--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
@@ -14,50 +14,7 @@
     <link href="~/css/dialog.css" rel="stylesheet" />
     <script src="~/js/dialog.min.js"></script>
     <script src="~/js/yjp.js"></script>
-    <script>
-        $(function () {
-            set();
-        });
-
-        function set() {
-            $("#btnsub").click(function () {
-                var password1 = $("#password1").val();
-                var password2 = $("#password2").val();
-                if (password1.length == 0) {
-                    alertmsg("密码不能为空");
-                    return false;
-
-                } else if (password1.length < 6 || password1.length > 12) {
-                    alertmsg("密码长度为6-12位");
-                    return false;
-                }
-                if (password2.length == 0) {
-                    alertmsg("确认密码不不能为空");
-                    return false;
-                }
-                if (password2 != password1) {
-                    alertmsg("两次密码不一致，请重新输入");
-                    return false;
-                }
-                $.post('/Home/SetPw', { password: password2 }, function (data) {
-
-                    if (data.Success != true) {
-                        alertmsg(data.Msg);
-
-                    } else {
-                        alertmsg("重置成功");
-
-                        setTimeout("location.href='/Home/Login';", 1500);
-
-                    }
-
-                });
-            }
-            );
-        }
-
-
-    </script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/SetPassword.js"></script>
     <script type="text/javascript" src="/js/baidu-statistics.js"></script>
 </head>
 
