--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
@@ -33,52 +33,7 @@
     <script type="text/javascript" src="~/js/runTime2.js"></script>
     <script type="text/javascript" src="/js/baidu-statistics.js"></script>
     <script src="~/js/6caiSX.js"></script>
-    <script>
-        function unorfollow(obj, follow_uid) {
-
-            var text = $(obj).text();
-
-            if (text == "关注") {
-                $.post('/Personal/IFollow', { followed_userId: follow_uid }, function (data) {
-
-                    if (data.Success != true) {
-                        alertmsg(data.Msg);
-                    } else {
-
-                        $(obj).text("已关注");
-
-
-                    }
-                });
-
-            } else {
-
-                $(document).dialog({
-                    type: 'confirm',
-                    closeBtnShow: true,
-                    style:"ios",
-                    content: '确定不再关注此人?',
-                    onClickConfirmBtn: function () {
-                        $.post('/Personal/UnFollow', { followed_userId: follow_uid }, function (data) {
-
-                            if (data.Success != true) {
-                                alertmsg(data.Msg);
-                            } else {
-
-
-
-                                $(obj).text("关注");
-
-
-                            }
-                        });
-                    }
-                });
-            }
-        }
-
-    </script>
-
+    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/PlayRecord.js"></script>
 
 </head>
 
