--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
@@ -259,21 +259,16 @@
 
 
     <script type="text/javascript">
-
-
-new Mdate("dateSelectorOne",
-    {
-
-    acceptId: "dateSelectorOne",
-    beginYear: "2015",
-    beginMonth: "1",
-    beginDay: "1",
-    endYear: "",
-    endMonth: "",
-    endDay: "",
-    format: "-"
-  
-})
+        new Mdate("dateSelectorOne", {
+            acceptId: "dateSelectorOne",
+            beginYear: "2015",
+            beginMonth: "1",
+            beginDay: "1",
+            endYear: "",
+            endMonth: "",
+            endDay: "",
+            format: "-"
+        })
     </script>
 </body>
 
