--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/ModifyPassword.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/ModifyPassword.cshtml
@@ -8,61 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>个人中心-设置-修改密码</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-
     <script src="~/js/jquery-1.8.3.min.js"></script>
     <link href="~/css/dialog.css" rel="stylesheet" />
     <script src="~/js/dialog.min.js"></script>
     <script src="~/js/yjp.js"></script>
     <script type="text/javascript" src="/js/baidu-statistics.js"></script>
-    <script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/ModifyPassword.js"></script>
 
-        $(function () {
-            modiflypwd();
-
-        });
-
-        function modiflypwd() {
-            $("#btnconfirm").click(function () {
-                var oldpwd = $("#oldpwd").val();
-                var newpwd = $("#newpwd").val();
-                var cfnewpwd = $("#cfnewpwd").val();
-                if (oldpwd.length == 0) {
-                    alertmsg("旧密码不能为空")
-                    return false;
-                }
-                if (newpwd.length == 0) {
-                    alertmsg("新密码不能为空")
-                    return false;
-                } else if (newpwd.length < 6 || newpwd.length > 12) {
-                    alertmsg("密码长度为6-12位");
-                    return false;
-                }
-                if (cfnewpwd.length == 0) {
-                    alertmsg("确认密码不能为空");
-                    return false;
-                } else {
-                    if (cfnewpwd != newpwd) {
-                        alertmsg("两次密码输入不一致、请重新输入");
-                        return false;
-                    }
-                }
-                $.post('/Personal/ModifyPWD', { oldpwd: oldpwd, newpwd: newpwd }, function (data) {
-                    if (data.Success != true) {
-                        alertmsg(data.Msg);
-                    } else {
-                        alertmsg("修改成功");
-                    }
-                });
-
-            });
-
-
-        }
-
-
-
-
-    </script>
 </head>
 
 <body style="background:#F4F4F5;">
